--- a/.github/workflows/container-test.yml
+++ b/.github/workflows/container-test.yml
@@ -10,4 +10,4 @@ jobs:
         with:
           ruby-version: '3.0' # Not needed with a .ruby-version file
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-      - run: bundle exec rspec spec
+      - run: bundle exec rspec spec --format d
