--- a/.github/workflows/container-test.yml
+++ b/.github/workflows/container-test.yml
@@ -2,12 +2,30 @@ name: Test Docker Image
 on:
   push:
 jobs:
-  test:
-    runs-on: ubuntu-latest
+  build:
+    name: Build
+    runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v3
-      - uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '3.0' # Not needed with a .ruby-version file
-          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-      - run: bundle exec rspec spec --format d
+    - name: Checkout code
+      uses: actions/checkout@v2
+    - name: Build an image from Dockerfile
+      run: |
+      docker build -t sinatrarb
+    - name: Run Trivy vulnerability scanner
+      uses: aquasecurity/trivy-action@master
+      with:
+      image-ref: 'sinatrarb'
+      format: 'table'
+      exit-code: '1'
+      ignore-unfixed: true
+      vuln-type: 'os,library'
+      severity: 'CRITICAL,HIGH'
+  test:
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v3
+        - uses: ruby/setup-ruby@v1
+          with:
+            ruby-version: '3.0' # Not needed with a .ruby-version file
+            bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+        - run: bundle exec rspec spec --format d
