--- a/.github/workflows/container-test.yml
+++ b/.github/workflows/container-test.yml
@@ -9,8 +9,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
     - name: Build an image from Dockerfile
-      run: |
-      docker build -t sinatrarb
+      run: docker build -t sinatrarb .
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@master
       with:
